# facades/store-facade/src/controllers/index.ts
@@ -1,3 +1,4 @@
 export * from './ping.controller';
 export * from './home-page.controller';
 export * from './store.controller';
+export * from './auth.controller';
